<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation"  >
    <string name="lable_facotring">保理</string>
    <string name="lable_forfaiting">福费廷</string>
    <string name="maintab_home">首页</string>
    <string name="maintab_market">市场</string>
    <string name="maintab_message">消息</string>
    <string name="maintab_mine">我的</string>
    <string name="app_name">资产易</string>
    <string name="nopermission">未取得权限</string>
    <string name="nopermission_tips">没有获取到运行所必要的权限，请您同意后再使用</string>
    <string name="exception_nopermission">请您从手机管理应用内开启相关权限</string>
    <string name="home_title_text">资产易</string>
    <string name="home_dailyindex">每日指数</string>
    <string name="home_register_count">注册总量</string>
    <string name="home_deal_amount">成交金额（美元）</string>
    <string name="home_deal_count">成交笔数</string>
    <string name="home_libor">LIBOR 指数</string>
    <string name="home_shibro">SHIBOR 指数</string>
    <string name="home_hibor">HIBOR 指数</string>
    <string name="home_advantage">品牌优势</string>
    <string name="home_safe">安全保障</string>
    <string name="home_safe_detail">区块链技术保障交易安全</string>
    <string name="home_deal">交易快捷</string>
    <string name="home_deal_detail">最快2小时达成资产交易</string>
    <string name="home_message">信息开放</string>
    <string name="home_message_detail">公开透明的资产交易过程</string>
    <string name="home_manager">管理专业</string>
    <string name="home_manager_detail">针对场景提供专业服务</string>
    <string name="home_team">集团成员</string>
    <string name="home_team_all">旗下成员</string>
    <string name="home_bottom_text">中金汇理商业保理有限公司 | 北京中金汇理金融服务外包有限公司\n中金汇理融资租赁有限公司 | 中金汇理（ 天津 ） 融资租赁有限公司\n中金汇理资产管理有限公司 | 上海璞丰融资租赁有限公司\n宁波众泰融资租赁有限公司\n</string>
    <string name="home_text_product">产品领域</string>
    <string name="home_text_service">专业服务</string>
    <string name="home_text_detail_forfaiting">支持国际、国内信用证数字化交易</string>
    <string name="home_text_detail_factoring">支持多种保理服务及组合产品</string>
    <string name="home_text_send">资产登记与发布</string>
    <string name="home_text_detail_send">多币种的全球服务</string>
    <string name="home_text_search">资产查询与撮合</string>
    <string name="home_text_detail_search">多渠道资产查询方式</string>
    <string name="home_text_deal">资产交易与转让</string>
    <string name="home_text_detail_deal">资产全生命周期的管理</string>
    <string name="market_forfaiting_amount">承兑金额</string>
    <string name="market_title">市场</string>
    <string name="market_forfaiting_adapter_type_inland">国内</string>
    <string name="market_forfaiting_adapter_type_outland">国际</string>
    <string name="market_forfaiting_adapter_date">资产到期日 :</string>
    <string name="market_forfaiting_adapter_currency">承兑币种</string>
    <string name="market_forfaiting_adapter_validity">信息有效期 :</string>
    <string name="market_facotring_type1">单保理、明保理</string>
    <string name="market_facotring_type2">单保理、暗保理</string>
    <string name="market_facotring_type3">双保理、明保理</string>
    <string name="market_facotring_type4">双保理、暗保理</string>
    <string name="market_facotring_inland">国内</string>
    <string name="market_facotring_exprie">保理到期日：</string>
    <string name="market_facotring_name">保理商名称：</string>
    <string name="market_facotring_sell">资产卖出方：</string>
    <string name="market_forfaiting_type1">国内信用证</string>
    <string name="market_forfaiting_type2">国际信用证</string>
    <string name="market_forfaiting_filtrate_single">单保理</string>
    <string name="market_forfaiting_filtrate_double">双保理</string>
    <string name="market_forfaiting_filtrate_disclosed">明保理</string>
    <string name="market_forfaiting_filtrate_undisclosed">暗保理</string>
    <string name="market_forfaiting_filtrate_amount_count">承兑金额范围</string>
    <string name="market_forfaiting_filtrate_areaandcountry">地区/国家</string>
    <string name="market_forfaiting_filtrate_openbank_areaandcountry">开证行地区/开证行国家</string>
    <string name="market_forfaiting_filtrate_openfullname">开证行全名</string>
    <string name="market_forfaiting_filtrate_reset">重置</string>
    <string name="market_forfaiting_filtrate_sure">确定</string>
    <string name="market_forfaiting_filtrate_discountrate">贴现率范围（%）</string>
    <string name="market_forfaiting_filtrate_amount_round">金额范围</string>
    <string name="market_forfaiting_filtrate_transferrate">转让利率范围（%）</string>
    <string name="market_forfaiting_filtrate_type">信用证类型:</string>
    <string name="market_forfaiting_detail_takeup">收起</string>
    <string name="market_forfaiting_detail_takedown">展开</string>
    <string name="market_forfaiting_detail_stepone">资产发布上链</string>
    <string name="market_forfaiting_detail_steptwo">资产撮合成功</string>
    <string name="market_forfaiting_detail_stepthree">资产交易完成</string>
    <string name="market_forfaiting_detail_none">未上链</string>
    <string name="market_forfaiting_detail_make_sure">确认撮合</string>
    <string name="market_forfaiting_detail_submit_price">报价买入</string>
    <string name="market_forfaiting_detail_discount_rate">贴现率</string>
    <string name="market_forfaiting_detail_number">信用证编号</string>
    <string name="market_forfaiting_detail_credittype">信用证兑付方式</string>
    <string name="market_forfaiting_detail_creditdate">信用证签发日期</string>
    <string name="market_forfaiting_detail_openswiftcode">开证行SWIFT CODE</string>
    <string name="market_forfaiting_detail_openfullname">开证行全名</string>
    <string name="market_forfaiting_detail_acceptswiftcode">承兑行SWIFT CODE</string>
    <string name="market_forfaiting_detail_acceptfullname">承兑行全名</string>
    <string name="market_forfaiting_detail_acceptdate">承兑日期</string>
    <string name="market_forfaiting_detail_payswift">偿付行SWIFT CODE</string>
    <string name="market_forfaiting_detail_payfullname">偿付行全名</string>
    <string name="market_forfaiting_detail_blockchain">区块链信息</string>
    <string name="market_forfaiting_detail_deal">福费廷协议</string>
    <string name="market_forfaiting_detail_download">下载</string>
    <string name="market_forfaiting_detail_sellmessage">卖方信息</string>
    <string name="market_forfaiting_detail_complete1">共完成</string>
    <string name="market_forfaiting_detail_complete2">笔</string>
    <string name="market_forfaiting_detail_countall">成交金额</string>
    <string name="market_forfaiting_detail_dealrate">成交率</string>
    <string name="market_forfaiting_detail_swift_code">SWIFT CODE</string>
    <string name="market_forfaiting_detail_arealable">注册地</string>
    <string name="market_forfaiting_detail_quote">报价信息</string>
    <string name="market_factoring_detail_seller_amountwan">美元</string>
    <string name="market_factoring_detail_insured">已投保</string>
    <string name="market_factoring_detail_transferrate">转让利率</string>
    <string name="market_factoring_detail_date">资产到期日</string>
    <string name="market_factoring_detail_creditpreson">信用保险承保人</string>
    <string name="market_factoring_detail_creditperson1">原始债权人</string>
    <string name="market_factoring_detail_creditperson2">原始债务人</string>
    <string name="market_factoring_detail_factoringdeal">财务报表</string>
    <string name="myquote_forfaiting_detail_title3">复核结果</string>
    <string name="item_myquote_detail_price_list_daifuhe">待复核</string>
    <string name="item_myquote_detail_price_list_tongguo">通过</string>
    <string name="item_myquote_detail_price_list_weitongguo">未通过</string>
    <string name="adapter_market_forfaiting_date">报价时间：</string>
    <string name="issue_forfaiting_sell">出售录入</string>
    <string name="issue_forfaiting_quote">偏好录入</string>
    <string name="issue_forfaiting_picker_date">日期</string>
    <string name="forfaiting_sell_save">保存</string>
    <string name="issue_forfaiting_sell_title">标题</string>
    <string name="issue_forfaiting_sell_letteracceptphoto">信用证承兑电（选填）</string>
    <string name="issue_forfaiting_sell_upload">上传</string>
    <string name="issue_forfaiting_sell_letter">信用证（选填）</string>
    <string name="issue_forfaiting_sell_ocr">此文件上传仅用于OCR识别</string>
    <string name="issue_forfaiting_sell_credittype">信用证类型</string>
    <string name="issue_forfaiting_sell_payswiftcode">偿付行SWIFT CODE（如有）</string>
    <string name="issue_forfaiting_sell_payfullname">偿付行全名（如有）</string>
    <string name="issue_forfaiting_sell_choicecurrency">请选择</string>
    <string name="issue_forfaiting_sell_discountrate">贴现率</string>
    <string name="issue_forfaiting_sell_indate">信息有效期</string>
    <string name="issue_forfaiting_sell_letterfile">福费廷协议（选填）</string>
    <string name="issue_forfaiting_sell_area">地区</string>
    <string name="issue_forfaiting_sell_openbank_area">开证行地区</string>
    <string name="issue_forfaiting_sell_countrys">国家</string>
    <string name="issue_forfaiting_sell_openbank_countrys">开证行国家</string>
    <string name="issue_forfaiting_sell_submit">提交</string>
    <string name="issue_forfaiting_sell_next">下一步</string>
    <string name="issue_forfaiting_sell_enddate">资产到期日</string>
    <string name="market_forfaiting_detail_deal_type">信用证兑付方式</string>
    <string name="issue_forfaiting_sell_letter0">信用证</string>
    <string name="issue_forfaiting_sell_letteracceptphoto0">信用证承兑电</string>
    <string name="issue_forfaiting_sell_yesorno">确认提交？</string>
    <string name="issue_factoring_sell_no">否</string>
    <string name="issue_factoring_sell">资产卖出方</string>
    <string name="issue_factoring_sell_type">保理类型</string>
    <string name="issue_factoring_sell_money">金额</string>
    <string name="issue_factoring_sell_currency">币种</string>
    <string name="issue_factoring_sell_transferrate">转让利率</string>
    <string name="issue_factoring_sell_exprie">保理到期日</string>
    <string name="issue_factoring_sell_name">保理商名称</string>
    <string name="issue_factoring_sell_creditpreson1">原始债权人（选填）</string>
    <string name="issue_factoring_sell_creditpreson2">原始债务人（选填）</string>
    <string name="issue_factoring_sell_iscover">是否投保出口信用保险</string>
    <string name="issue_factoring_sell_assurer">信用保险承保人</string>
    <string name="issue_factoring_sell_indate">信息有效期</string>
    <string name="issue_factoring_sell_insurancecompact">保理合同</string>
    <string name="issue_factoring_sell_compact">货物保险单（如有）</string>
    <string name="issue_factoring_sell_transport">运输单据（选填）</string>
    <string name="issue_factoring_sell_notice">应收账款转让通知书</string>
    <string name="issue_factoring_sell_tradingcontract">贸易合同（选填）</string>
    <string name="issue_factoring_sell_compact1">货物保险单</string>
    <string name="issue_factoring_sell_transport1">运输单据</string>
    <string name="issue_factoring_sell_tradingcontract1">贸易合同</string>
    <string name="issue_factoring_sell_yes">是</string>
    <string name="issue_forfaiting_buy_discountrate">预期贴现率（收益率）</string>
    <string name="issue_forfaiting_buy_validityinformation">期望福费廷资产期限</string>
    <string name="issue_forfaiting_buy_qian">前</string>
    <string name="issue_forfaiting_buy_accepttype">信用证兑付方式（选填）</string>
    <string name="issue_forfaiting_buy_area">地区（选填）</string>
    <string name="forfaiting_offer_yesorno">是否确认提交？</string>
    <string name="filtrate">筛选</string>
    <string name="filtrate_senddate">资产发布时间</string>
    <string name="toast_issue_frofaiting_nodata">暂无数据</string>
    <string name="find_password_meet_question">遇到问题? 提交账户申诉</string>
    <string name="find_password_title">找回密码</string>
    <string name="find_password_msgcode">请输入验证码</string>
    <string name="find_password_button_getmsgcode">获取验证码</string>
    <string name="findpassword_get_next">下一步</string>
    <string name="mine_message">业务消息</string>
    <string name="system_message">系统公告</string>
    <string name="message_ask">最新资讯</string>
    <string name="message_kehu_server">联系我们</string>
    <string name="login_emial_phone">请输入邮箱/手机号</string>
    <string name="mine_upload_type">选择</string>
    <string name="mine_upload">文件</string>
    <string name="mine_tack_paction">图片/拍照</string>
    <string name="mine_message_phone">86-10-85172637-857</string>
    <string name="mine_message_address">北京市朝阳区建外大街2号北京银泰中心C座1704</string>
    <string name="mine_message_service_time">服务时间：北京时间工作日9:00-11:30； 13:30-17:30</string>
</resources>