<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--标题栏-->
    <!--<include layout="@layout/titlebar" />-->

    <!--FrameLayout-->

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!--底部的RadioGroup-->
    <RadioGroup
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >


        <RadioButton
            android:id="@+id/rb_homepager"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_common_frame_drawable_selector"
            android:text="@string/maintab_home"
            />

        <RadioButton
            android:id="@+id/rb_thirdparty"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_thirdparty_drawable_selector"
            android:text="@string/maintab_market"

            />

        <RadioButton
            android:id="@+id/rb_publish"
            style="@style/bottom_tag_style3"
            android:drawableBottom="@drawable/publish_image"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-5dp"
             />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/bottom_tag_style2"
            android:drawableTop="@drawable/rb_custom_drawable_selector"
            android:text="@string/maintab_message"
            android:layout_marginRight="115dp"
            />
        <TextView
            android:id="@+id/iv_node_red"
            android:layout_width="@dimen/margin_15dp"
            android:layout_height="@dimen/margin_15dp"
            android:layout_gravity="top"
            android:layout_marginLeft="-150dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:maxLength="3"
            android:textSize="8dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/msg_count_rednode"
            android:visibility="invisible"
            />
        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/bottom_tag_style"
            android:drawableTop="@drawable/rb_other_drawable_selector"
            android:text="@string/maintab_mine" />
    </RadioGroup>


</LinearLayout>