<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout_title"
        android:layout_height="@dimen/margin_60dp"
        style="@style/title_style">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="@dimen/margin_15dp"
            android:src="@drawable/back_image" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/find_password_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_36px" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:background="@drawable/shadow_bg"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_putphone_emial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@null"
            android:hint="@string/login_emial_phone"
            android:maxLength="30"
            android:singleLine="true"
            android:textColorHint="#cccccc"
            android:textSize="@dimen/font_size_30px" />


        <EditText
            android:id="@+id/getMsgCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_15dp"
            android:layout_below="@+id/et_putphone_emial"
            android:layout_toLeftOf="@+id/buttion_getMsg"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_toRightOf="@+id/iv_msg"
            android:background="@null"
            android:hint="@string/find_password_msgcode"
            android:maxLength="4"
            android:singleLine="true"
            android:inputType="number"
            android:textColorHint="@color/common_text_gray1"
            android:textSize="@dimen/font_size_30px" />

        <Button
            android:id="@+id/buttion_getMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/getMsgCode"
            android:layout_below="@+id/et_putphone_emial"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_15dp"
            android:background="@null"
            android:text="@string/find_password_button_getmsgcode"
            android:textColor="@color/blue"
            android:textSize="@dimen/font_size_26px" />


    </RelativeLayout>

    <TextView
        android:id="@+id/button_forget_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45dp"
        android:layout_marginLeft="@dimen/margin_25dp"
        android:layout_marginRight="@dimen/margin_25dp"
        android:layout_below="@+id/buttion_getMsg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_50dp"
        android:background="@drawable/login_button_background"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/findpassword_get_next"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_30px" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="350dp"
        android:text="@string/find_password_meet_question"
        android:textColor="@color/blue"
        android:textSize="17dp"
        android:visibility="gone"

        />

</LinearLayout>
