<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/mssage_title"
        layout="@layout/titlebar" />

    <LinearLayout
        android:id="@+id/rg_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mssage_title"
        android:layout_marginLeft="-6dp"
        android:layout_marginRight="-6dp"
        android:background="@drawable/msg_background"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_busniss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/bisniss_messge"
            android:gravity="center"
            android:text="@string/mine_message"
            android:textColor="@color/dark" />

        <TextView
            android:id="@+id/tv_system_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/system_message"
            android:gravity="center"
            android:text="@string/system_message"
            android:textColor="@color/dark"
            />


        <TextView
            android:id="@+id/tv_advice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/policy_advice"
            android:gravity="center"
            android:text="@string/message_ask"
            android:textColor="@color/dark" />

        <TextView
            android:id="@+id/tv_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/customer_service"
            android:gravity="center"
            android:text="@string/message_kehu_server"
            android:textColor="@color/dark" />
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:layout_below="@+id/rg_main"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/rl_message_bk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_main"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:background="@drawable/mine_enter_up_msg"
        android:paddingBottom="@dimen/margin_30dp"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/ll_emial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:paddingBottom="@dimen/margin_15dp">

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/mine_messge_email"
                android:text="121" />

            <TextView
                android:id="@+id/no_massge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_15dp"
                android:text="services@newnewchain.com"
                android:textSize="@dimen/margin_15dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_emial"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginTop="@dimen/margin_15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv__icon_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/mine_messge_phone"
                android:text="121" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_15dp"
                android:text="@string/mine_message_phone" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_phone"
            android:layout_marginLeft="55dp"
            android:gravity="center"
            android:text="@string/mine_message_service_time"
            android:textColor="@color/qian_write" />

        <LinearLayout
            android:id="@+id/ll_msg_andress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_phone"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_15dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv__phone_icon_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:background="@drawable/mine_message"
                android:text="121" />

            <TextView
                android:id="@+id/tv_phone_number_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_15dp"
                android:text="@string/mine_message_address"

                />
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
